--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
+url: http://marukulau.github.com
+title: Maruku's Blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: Maruku Lau
 simple_search: http://google.com/search
 description:
 
@@ -63,13 +63,6 @@ github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
-# Twitter
-twitter_user:
-twitter_tweet_count: 4
-twitter_show_replies: false
-twitter_follow_button: true
-twitter_show_follower_count: false
-twitter_tweet_button: true
 
 # Google +1
 google_plus_one: false
