--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://marukulau.github.com
 title: Maruku's Blog
-subtitle: A blogging framework for hackers.
+subtitle: 要走的路还很长...
 author: Maruku Lau
 simple_search: http://google.com/search
 description:
@@ -90,3 +90,6 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
+
+# Weibo Share
+weibo_share: true
